# resume-jd-analyzer

./: .dockerignore  .env.example  Dockerfile  README.md  decisions.md  pyproject.toml  test_results.md
data/: sample_jd.txt  sample_jd_full.txt  sample_jd_vague.txt
resume_agent/: api.py  main.py
resume_agent/agents/: llm_agent.py  llm_calling.py  prompt.py  state.py
resume_agent/budget/: budget_enforcer.py
resume_agent/core/: config.py  loggings.py
resume_agent/tools/: code_exec.py  resume_parser.py  web_search.py
tests/: __init__.py  test_code_exec.py  test_cost_exhaust.py  test_data.py  test_infinite_loop.py  test_resume_parser.py  test_run.py  test_web_search.py
