[project]
name = "jobins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pymupdf>=1.28.0",
    "openai>=1.80.0",
    "tavily-python>=0.7.26",
    "pydantic-settings>=2.14.2",
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
    "python-multipart>=0.0.32",
]
